--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 </div>
                 <!-- Box 4 -->
                 <div class="box">
-                    <img src="img/1_Witch_from_Mercury_Key_Visual.jpg" alt="">
+                    <img src="img/2_Mobile_Suit_Gundam_IRON-BLOODED_ORPHANS_Poster.png" alt="">
                     <div class="box-text">
                         <h2>Mobile Suit Gundam IRON-BLOODED ORPHANS</h2>
                         <h3>Action</h3>
