About_Gundam.html

--- a/Assets/About_Gundam.html
+++ b/Assets/About_Gundam.html
@@ -24,7 +24,7 @@
         <!-- Nav -->
         <div class="nav container">
             <!-- Logo -->
-            <a href="Index.html" class="logo">Gundam<span>World</span></a>
+            <a href="index.html" class="logo">Gundam<span>World</span></a>
             <!-- Nav Icons -->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
@@ -39,7 +39,7 @@
             <div class="menu">
                 <img src="img/menu.png" alt="">
                 <div class="navbar">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About_Gundam.html">About Gundam</a></li>
                 </div>
             </div>
@@ -71,7 +71,7 @@
     <!-- Copyright -->
     <div class="copyright container">
         <a href="#" class="logo">Gundam<span>World</span></a>
-        <p>&#169; Carpoolvenom All Right Reseverved</p>
+        <p>&#169; Eka Satrio Touladan</p>
     </div>
 
 
