--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#trending">Trending</a></li>
                     <li><a href="#new">Recomended</a></li>
-                    <li><a href="About_Gundam.html">About Gundam</a></li>
+                    <li><a href="Assets/About_Gundam.html">About Gundam</a></li>
                     <li><a href="#contact"></a></li>
                 </div>
             </div>
